# RateMySudoku

./: .gitignore  Cargo.toml  README.md  index.html  masks.txt
.github/workflows/: main.yml
collections/: gordon-royle-17.txt  impossible.txt
src/: claimingpair.rs  gen.rs  generator.rs  hiddenpair.rs  hiddensingle.rs  lastdigit.rs  lib.rs  lockedpair.rs  nakedtriplet.rs  obviouspair.rs  obvioussingle.rs  pointingpair.rs  rate.rs  skyscraper.rs  sudoku.rs  triplets.rs  ui.rs  xwing.rs
src/rate/: rate.rs
src/ui/: ui.rs
tests/: claimingpair.rs  hiddenpair.rs  lockedpair.rs  nakedtriplet.rs  obviouspair.rs  pointingpair.rs  simple.rs  skyscraper.rs  strategies.rs  sudoku.rs  triplets.rs  xwing.rs
