[package]
name = "rate-my-sudoku"
version = "0.1.0"
edition = "2024"
authors = ["Oliver Lau"]
repository = "https://github.com/607011/RateMySudoku"
license = "MIT"
description = "A Sudoku puzzle solver and rating tool."
keywords = ["sudoku", "puzzle", "game"]
categories = ["games"]

[dependencies]
rand = { version = "^0.9" }
clap = { version = "^4.5", features = ["derive"] }
eframe = { version = "^0.31", features = [
    "persistence",
    "glow",
    "default_fonts",
    "wayland",
] }
egui = { version = "^0.31", features = ["persistence"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0"
log = "^0.4"
env_logger = "^0.11"
num_cpus = "^1.16"
rfd = "^0.15"
zstd = "^0.13"

[features]
default = ["dump"]
dump = []

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
    "Storage",
    "Clipboard",
    "ClipboardEvent",
] }

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[[bin]]
name = "sudokui"
path = "src/ui/ui.rs"

[[bin]]
name = "rate"
path = "src/rate/rate.rs"
required-features = ["dump"]

[[bin]]
name = "gen"
path = "src/gen/gen.rs"
required-features = ["dump"]
